Temp fix for blank view. Somehow the third calls to AddIconToLayout() cause this strange bug. Tried to address this by remember the Skia in global variable but neither that work. This is a temp fix till we figure out what is going on in the ImageView.

BUG=610351

Review-Url: https://codereview.chromium.org/1967743002
Cr-Commit-Position: refs/heads/master@{#392761}

Former-commit-id: 1a26f1f5d6e4ecaa7f098302b17d8f87eb690362